# swagger-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  server_start.py
.github/workflows/: docker-build.yml
swagger_mcp/: __init__.py  models.py  parser.py  server.py
test/: __init__.py  conftest.py  test_server.py
